# CppND-System-Monitor

./: CMakeLists.txt  Makefile  README.md  environment.yaml
.github/workflows/: main.yaml
include/: format.h  linux_parser.h  ncurses_display.h  process.h  processor.h  system.h
src/: format.cpp  linux_parser.cpp  ncurses_display.cpp  process.cpp  processor.cpp  system.cpp
